--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- ✅ Hero Section -->
     <!-- ✅ Horizontal Brand Header -->
     <header class="brand-header">
-        <img src="vani.jpg" alt="Vani Sree" class="brand-photo" />
+        <img src="clock.png" alt="Vani Sree" class="brand-photo" />
         <div class="brand-text">
             <h1 class="brand-title">Klock by Vani Sree</h1>
             <p class="brand-sub">The cleanest way to rise and shine ⏰</p>
